@@ -1,6 +1,6 @@
 use v6;
 
-use PDF:ver(v0.3.2+);
+use PDF:ver(v0.3.8);
 
 #| PDF entry-point. either a trailer dict or an XRef stream
 class PDF::Class:ver<0.3.9>#:api<PDF-1.7>
