@@ -1,5 +1,6 @@
 Release 0.3.9
 - Minor refactor of destination coercements. Add PDF::Names; extracted from PDF::Catalog.
+- Added classes PDF::Sound PDF::Action::Sound
 
 Release 0.3.8
 - Add Catalog Permissions and PDF::Signature::Reference roles
